20040720 ui/fb/fbdisplay.c: Timex rendering fixes (Darren).
20040720 settings.dat,man/fuse.1,ui/fb/fbdisplay.c,ui/svga/svgadisplay.c:
	 optionally use doublescan modes for SVGAlib and fb (Darren).
20040720 tape.c: improve 'tape modified' confirmation message (Darren).
20040721 ui/gtk/{Makefile.am,binary.c,browse.c,confirm.c,debugger.c,
	 gtkinternals.h,gtkjoystick.c,gtkui.c,memory.c,options.pl,
	 picture.c,pokefinder.c,roms.c,stock.c}: factor out common button
	 creation code. Add GTK+ 2.x stock buttons (Darren).
20040721 ui/fb/fbkeyboard.c: restore old keyboard mode on exit.
20040721 ui/gtk/pixmaps.c: #include <config.h>
20040721 ula.c: Add issue 2 keyboard snapshot support.
20040722 ui/fb/fbdisplay.c: improve error messages slightly.
20040723 trdos.c: get the capabilities check right in trdos_from_snapshot.
	 Should prevent the occasional errant 'No disk' messages.
20040724 ui/sdl/sdldisplay.c: SDL_SetColors does not take a const array. Fix
         565/555 mode detection.
20040724 widget/text.c: fix small memory leak (Darren).
20040724 ui/gtk/pokefinder.c: remove unnecessary accelerator code (Darren).
20040724 keysyms.pl,ui/fb/fbkeyboard.c: reintegrate the framebuffer keyboard
         mapping code into keysyms.pl.
20040729 z80/tests/README: document .in and .out file formats.
20040730 configure.in,ui/fb/fbdisplay.c: actually use the GPM code (Darren).
20040807 Makefile.am,configure.in,fuse.c,input.c,kempmouse.[ch],periph.c,
	 settings.dat,ui.c,man/fuse.1,ui/{options.dat,ui.h},
	 ui/fb/{Makefile.am,fbdisplay.c,fbmouse.[ch],fbui.c},
	 ui/gtk/{Makefile.am,gtkinternals.h,gtkkeyboard.c,gtkmouse.c,gtkui.c},
	 ui/sdl/{sdldisplay.c,sdlui.c}, ui/svga/svgaui.c, ui/win32/win32ui.c,
	 ui/xlib/xui.c: Kempston mouse support (Darren).
20040807 ui.c: remove extraneous if in ui_mouse_suspend (Darren).
20040808 ui/ui.h, ui/gtk/{gtkmouse.c,statusbar.c}: add 'mouse grabbed'
	 icon.
20040809 z80/Makefile.am: Link coretest against @LIBSPEC_LIBS@.